target/generated-sources/antlr4/com/company/naturaladabascli/antlr/NaturalParser.java
// Generated from com/company/naturaladabascli/antlr/NaturalParser.g4 by ANTLR 4.9.3
package com.company.naturaladabascli.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NaturalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, NL=2, LINE_COMMENT=3, END_FIND=4, END_IF=5, END_DEFINE=6, END_DECIDE=7, 
		END_TRANSACTION=8, BACKOUT_TRANSACTION=9, DEFINE=10, DATA=11, LOCAL=12, 
		GLOBAL=13, PARAMETER=14, VIEW=15, OF=16, FIND=17, READ=18, GET=19, HISTOGRAM=20, 
		WITH=21, STORE=22, UPDATE=23, DELETE=24, CALLNAT=25, PERFORM=26, INCLUDE=27, 
		IF=28, ELSE=29, DECIDE=30, COMPUTE=31, MOVE=32, ASSIGN=33, REINPUT=34, 
		INPUT=35, WRITE=36, DISPLAY=37, ON=38, VALUE=39, ESCAPE=40, END=41, STAR=42, 
		COMMA=43, DOT=44, COLON=45, LPAREN=46, RPAREN=47, EQ=48, STRING=49, INT=50, 
		ID=51, OTHER=52;
	public static final int
		RULE_program = 0, RULE_programElement = 1, RULE_defineData = 2, RULE_dataLine = 3, 
		RULE_defineLine = 4, RULE_typeSpec = 5, RULE_findStatement = 6, RULE_readLikeStatement = 7, 
		RULE_histogramStatement = 8, RULE_storeStatement = 9, RULE_updateStatement = 10, 
		RULE_deleteStatement = 11, RULE_endTransactionStatement = 12, RULE_backoutTransactionStatement = 13, 
		RULE_callnatStatement = 14, RULE_callArgList = 15, RULE_performStatement = 16, 
		RULE_includeStatement = 17, RULE_computeStatement = 18, RULE_moveStatement = 19, 
		RULE_assignStatement = 20, RULE_writeStatement = 21, RULE_displayStatement = 22, 
		RULE_reinputStatement = 23, RULE_inputStatement = 24, RULE_ifStatement = 25, 
		RULE_decideStatement = 26, RULE_decideBranch = 27, RULE_blockContent = 28, 
		RULE_expr = 29, RULE_unknownStatement = 30, RULE_unknownLine = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programElement", "defineData", "dataLine", "defineLine", 
			"typeSpec", "findStatement", "readLikeStatement", "histogramStatement", 
			"storeStatement", "updateStatement", "deleteStatement", "endTransactionStatement", 
			"backoutTransactionStatement", "callnatStatement", "callArgList", "performStatement", 
			"includeStatement", "computeStatement", "moveStatement", "assignStatement", 
			"writeStatement", "displayStatement", "reinputStatement", "inputStatement", 
			"ifStatement", "decideStatement", "decideBranch", "blockContent", "expr", 
			"unknownStatement", "unknownLine"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'END-FIND'", "'END-IF'", "'END-DEFINE'", "'END-DECIDE'", 
			null, null, "'DEFINE'", "'DATA'", "'LOCAL'", "'GLOBAL'", "'PARAMETER'", 
			"'VIEW'", "'OF'", "'FIND'", "'READ'", "'GET'", "'HISTOGRAM'", "'WITH'", 
			"'STORE'", "'UPDATE'", "'DELETE'", "'CALLNAT'", "'PERFORM'", "'INCLUDE'", 
			"'IF'", "'ELSE'", "'DECIDE'", "'COMPUTE'", "'MOVE'", "'ASSIGN'", "'REINPUT'", 
			"'INPUT'", "'WRITE'", "'DISPLAY'", "'ON'", "'VALUE'", "'ESCAPE'", "'END'", 
			"'*'", "','", "'.'", "':'", "'('", "')'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "NL", "LINE_COMMENT", "END_FIND", "END_IF", "END_DEFINE", 
			"END_DECIDE", "END_TRANSACTION", "BACKOUT_TRANSACTION", "DEFINE", "DATA", 
			"LOCAL", "GLOBAL", "PARAMETER", "VIEW", "OF", "FIND", "READ", "GET", 
			"HISTOGRAM", "WITH", "STORE", "UPDATE", "DELETE", "CALLNAT", "PERFORM", 
			"INCLUDE", "IF", "ELSE", "DECIDE", "COMPUTE", "MOVE", "ASSIGN", "REINPUT", 
			"INPUT", "WRITE", "DISPLAY", "ON", "VALUE", "ESCAPE", "END", "STAR", 
			"COMMA", "DOT", "COLON", "LPAREN", "RPAREN", "EQ", "STRING", "INT", "ID", 
			"OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NaturalParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NaturalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode END() { return getToken(NaturalParser.END, 0); }
		public TerminalNode EOF() { return getToken(NaturalParser.EOF, 0); }
		public List<ProgramElementContext> programElement() {
			return getRuleContexts(ProgramElementContext.class);
		}
		public ProgramElementContext programElement(int i) {
			return getRuleContext(ProgramElementContext.class,i);
		}
		public TerminalNode NL() { return getToken(NaturalParser.NL, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NaturalParserVisitor ) return ((NaturalParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << NL) | (1L << LINE_COMMENT) | (1L << END_TRANSACTION) | (1L << BACKOUT_TRANSACTION) | (1L << DEFINE) | (1L << DATA) | (1L << LOCAL) | (1L << GLOBAL) | (1L << PARAMETER) | (1L << VIEW) | (1L << OF) | (1L << FIND) | (1L << READ) | (1L << GET) | (1L << HISTOGRAM) | (1L << WITH) | (1L << STORE) | (1L << UPDATE) | (1L << DELETE) | (1L << CALLNAT) | (1L << PERFORM) | (1L << INCLUDE) | (1L << IF) | (1L << DECIDE) | (1L << COMPUTE) | (1L << MOVE) | (1L << ASSIGN) | (1L << REINPUT) | (1L << INPUT) | (1L << WRITE) | (1L << DISPLAY) | (1L << ON) | (1L << VALUE) | (1L << ESCAPE) | (1L << STAR) | (1L << COMMA) | (1L << DOT) | (1L << COLON) | (1L << LPAREN) | (1L << RPAREN) | (1L << EQ) | (1L << STRING) | (1L << INT) | (1L << ID) | (1L << OTHER))) != 0)) {
					{
					{
					setState(64);
					programElement();
					}
					}
					setState(69);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(70);
				match(END);
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NL) {
					{
					setState(71);
					match(NL);
					}
				}

				setState(74);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << NL) | (1L << LINE_COMMENT) | (1L << END_TRANSACTION) | (1L << BACKOUT_TRANSACTION) | (1L << DEFINE) | (1L << DATA) | (1L << LOCAL) | (1L << GLOBAL) | (1L << PARAMETER) | (1L << VIEW) | (1L << OF) | (1L << FIND) | (1L << READ) | (1L << GET) | (1L << HISTOGRAM) | (1L << WITH) | (1L << STORE) | (1L << UPDATE) | (1L << DELETE) | (1L << CALLNAT) | (1L << PERFORM) | (1L << INCLUDE) | (1L << IF) | (1L << DECIDE) | (1L << COMPUTE) | (1L << MOVE) | (1L << ASSIGN) | (1L << REINPUT) | (1L << INPUT) | (1L << WRITE) | (1L << DISPLAY) | (1L << ON) | (1L << VALUE) | (1L << ESCAPE) | (1L << STAR) | (1L << COMMA) | (1L << DOT) | (1L << COLON) | (1L << LPAREN) | (1L << RPAREN) | (1L << EQ) | (1L << STRING) | (1L << INT) | (1L << ID) | (1L << OTHER))) != 0)) {
					{
					{
					setState(75);
					programElement();
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(81);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramElementContext extends ParserRuleContext {
		public DefineDataContext defineData() {
			return getRuleContext(DefineDataContext.class,0);
		}
		public FindStatementContext findStatement() {
			return getRuleContext(FindStatementContext.class,0);
		}
		public ReadLikeStatementContext readLikeStatement() {
			return getRuleContext(ReadLikeStatementContext.class,0);
		}
		public HistogramStatementContext histogramStatement() {
			return getRuleContext(HistogramStatementContext.class,0);
		}
		public StoreStatementContext storeStatement() {
			return getRuleContext(StoreStatementContext.class,0);
		}
		public UpdateStatementContext updateStatement() {
			return getRuleContext(UpdateStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public EndTransactionStatementContext endTransactionStatement() {
			return getRuleContext(EndTransactionStatementContext.class,0);
		}
		public BackoutTransactionStatementContext backoutTransactionStatement() {
			return getRuleContext(BackoutTransactionStatementContext.class,0);
		}
		public CallnatStatementContext callnatStatement() {
			return getRuleContext(CallnatStatementContext.class,0);
		}
		public PerformStatementContext performStatement() {
			return getRuleContext(PerformStatementContext.class,0);
		}
		public IncludeStatementContext includeStatement() {
			return getRuleContext(IncludeStatementContext.class,0);
		}
		public ComputeStatementContext computeStatement() {
			return getRuleContext(ComputeStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public DecideStatementContext decideStatement() {
			return getRuleContext(DecideStatementContext.class,0);
		}
		public MoveStatementContext moveStatement() {
			return getRuleContext(MoveStatementContext.class,0);
		}
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public WriteStatementContext writeStatement() {
			return getRuleContext(WriteStatementContext.class,0);
		}
		public DisplayStatementContext displayStatement() {
			return getRuleContext(DisplayStatementContext.class,0);
		}
		public ReinputStatementContext reinputStatement() {
			return getRuleContext(ReinputStatementContext.class,0);
		}
		public InputStatementContext inputStatement() {
			return getRuleContext(InputStatementContext.class,0);
		}
		public UnknownStatementContext unknownStatement() {
			return getRuleContext(UnknownStatementContext.class,0);
		}
		public ProgramElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).enterProgramElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).exitProgramElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NaturalParserVisitor ) return ((NaturalParserVisitor<? extends T>)visitor).visitProgramElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramElementContext programElement() throws RecognitionException {
		ProgramElementContext _localctx = new ProgramElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programElement);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEFINE:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				defineData();
				}
				break;
			case FIND:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				findStatement();
				}
				break;
			case READ:
			case GET:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				readLikeStatement();
				}
				break;
			case HISTOGRAM:
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				histogramStatement();
				}
				break;
			case STORE:
				enterOuterAlt(_localctx, 5);
				{
				setState(88);
				storeStatement();
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 6);
				{
				setState(89);
				updateStatement();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 7);
				{
				setState(90);
				deleteStatement();
				}
				break;
			case END_TRANSACTION:
				enterOuterAlt(_localctx, 8);
				{
				setState(91);
				endTransactionStatement();
				}
				break;
			case BACKOUT_TRANSACTION:
				enterOuterAlt(_localctx, 9);
				{
				setState(92);
				backoutTransactionStatement();
				}
				break;
			case CALLNAT:
				enterOuterAlt(_localctx, 10);
				{
				setState(93);
				callnatStatement();
				}
				break;
			case PERFORM:
				enterOuterAlt(_localctx, 11);
				{
				setState(94);
				performStatement();
				}
				break;
			case INCLUDE:
				enterOuterAlt(_localctx, 12);
				{
				setState(95);
				includeStatement();
				}
				break;
			case COMPUTE:
				enterOuterAlt(_localctx, 13);
				{
				setState(96);
				computeStatement();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 14);
				{
				setState(97);
				ifStatement();
				}
				break;
			case DECIDE:
				enterOuterAlt(_localctx, 15);
				{
				setState(98);
				decideStatement();
				}
				break;
			case MOVE:
				enterOuterAlt(_localctx, 16);
				{
				setState(99);
				moveStatement();
				}
				break;
			case ASSIGN:
				enterOuterAlt(_localctx, 17);
				{
				setState(100);
				assignStatement();
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 18);
				{
				setState(101);
				writeStatement();
				}
				break;
			case DISPLAY:
				enterOuterAlt(_localctx, 19);
				{
				setState(102);
				displayStatement();
				}
				break;
			case REINPUT:
				enterOuterAlt(_localctx, 20);
				{
				setState(103);
				reinputStatement();
				}
				break;
			case INPUT:
				enterOuterAlt(_localctx, 21);
				{
				setState(104);
				inputStatement();
				}
				break;
			case WS:
			case NL:
			case LINE_COMMENT:
			case DATA:
			case LOCAL:
			case GLOBAL:
			case PARAMETER:
			case VIEW:
			case OF:
			case WITH:
			case ON:
			case VALUE:
			case ESCAPE:
			case STAR:
			case COMMA:
			case DOT:
			case COLON:
			case LPAREN:
			case RPAREN:
			case EQ:
			case STRING:
			case INT:
			case ID:
			case OTHER:
				enterOuterAlt(_localctx, 22);
				{
				setState(105);
				unknownStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineDataContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(NaturalParser.DEFINE, 0); }
		public TerminalNode DATA() { return getToken(NaturalParser.DATA, 0); }
		public List<TerminalNode> NL() { return getTokens(NaturalParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(NaturalParser.NL, i);
		}
		public TerminalNode END_DEFINE() { return getToken(NaturalParser.END_DEFINE, 0); }
		public List<DataLineContext> dataLine() {
			return getRuleContexts(DataLineContext.class);
		}
		public DataLineContext dataLine(int i) {
			return getRuleContext(DataLineContext.class,i);
		}
		public TerminalNode LOCAL() { return getToken(NaturalParser.LOCAL, 0); }
		public TerminalNode GLOBAL() { return getToken(NaturalParser.GLOBAL, 0); }
		public TerminalNode PARAMETER() { return getToken(NaturalParser.PARAMETER, 0); }
		public DefineDataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineData; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).enterDefineData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).exitDefineData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NaturalParserVisitor ) return ((NaturalParserVisitor<? extends T>)visitor).visitDefineData(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineDataContext defineData() throws RecognitionException {
		DefineDataContext _localctx = new DefineDataContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defineData);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(DEFINE);
			setState(109);
			match(DATA);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << GLOBAL) | (1L << PARAMETER))) != 0)) {
				{
				setState(110);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << GLOBAL) | (1L << PARAMETER))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(113);
			match(NL);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << NL) | (1L << LINE_COMMENT) | (1L << DATA) | (1L << LOCAL) | (1L << GLOBAL) | (1L << PARAMETER) | (1L << VIEW) | (1L << OF) | (1L << WITH) | (1L << ON) | (1L << VALUE) | (1L << ESCAPE) | (1L << STAR) | (1L << COMMA) | (1L << DOT) | (1L << COLON) | (1L << LPAREN) | (1L << RPAREN) | (1L << EQ) | (1L << STRING) | (1L << INT) | (1L << ID) | (1L << OTHER))) != 0)) {
				{
				{
				setState(114);
				dataLine();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(END_DEFINE);
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(121);
				match(NL);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataLineContext extends ParserRuleContext {
		public DefineLineContext defineLine() {
			return getRuleContext(DefineLineContext.class,0);
		}
		public UnknownLineContext unknownLine() {
			return getRuleContext(UnknownLineContext.class,0);
		}
		public DataLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).enterDataLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).exitDataLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NaturalParserVisitor ) return ((NaturalParserVisitor<? extends T>)visitor).visitDataLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataLineContext dataLine() throws RecognitionException {
		DataLineContext _localctx = new DataLineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dataLine);
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				defineLine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				unknownLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineLineContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(NaturalParser.INT, 0); }
		public List<TerminalNode> ID() { return getTokens(NaturalParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(NaturalParser.ID, i);
		}
		public TerminalNode NL() { return getToken(NaturalParser.NL, 0); }
		public TerminalNode VIEW() { return getToken(NaturalParser.VIEW, 0); }
		public TerminalNode OF() { return getToken(NaturalParser.OF, 0); }
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public DefineLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).enterDefineLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).exitDefineLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NaturalParserVisitor ) return ((NaturalParserVisitor<? extends T>)visitor).visitDefineLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineLineContext defineLine() throws RecognitionException {
		DefineLineContext _localctx = new DefineLineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_defineLine);
		int _la;
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				match(INT);
				setState(129);
				match(ID);
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VIEW) {
					{
					setState(130);
					match(VIEW);
					setState(131);
					match(OF);
					setState(132);
					match(ID);
					}
				}

				setState(135);
				match(NL);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(INT);
				setState(137);
				match(ID);
				setState(138);
				typeSpec();
				setState(139);
				match(NL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeSpecContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(NaturalParser.LPAREN, 0); }
		public TerminalNode ID() { return getToken(NaturalParser.ID, 0); }
		public TerminalNode RPAREN() { return getToken(NaturalParser.RPAREN, 0); }
		public TerminalNode COMMA() { return getToken(NaturalParser.COMMA, 0); }
		public TerminalNode INT() { return getToken(NaturalParser.INT, 0); }
		public TypeSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).enterTypeSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).exitTypeSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NaturalParserVisitor ) return ((NaturalParserVisitor<? extends T>)visitor).visitTypeSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeSpecContext typeSpec() throws RecognitionException {
		TypeSpecContext _localctx = new TypeSpecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(LPAREN);
			setState(144);
			match(ID);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(145);
				match(COMMA);
				setState(146);
				match(INT);
				}
			}

			setState(149);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FindStatementContext extends ParserRuleContext {
		public TerminalNode FIND() { return getToken(NaturalParser.FIND, 0); }
		public TerminalNode ID() { return getToken(NaturalParser.ID, 0); }
		public List<TerminalNode> NL() { return getTokens(NaturalParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(NaturalParser.NL, i);
		}
		public TerminalNode END_FIND() { return getToken(NaturalParser.END_FIND, 0); }
		public TerminalNode WITH() { return getToken(NaturalParser.WITH, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<BlockContentContext> blockContent() {
			return getRuleContexts(BlockContentContext.class);
		}
		public BlockContentContext blockContent(int i) {
			return getRuleContext(BlockContentContext.class,i);
		}
		public FindStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_findStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).enterFindStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NaturalParserListener ) ((NaturalParserListener)listener).exitFindStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NaturalParserVisitor ) return ((NaturalParserVisitor<? extends T>)visitor).visitFindStatement(this);
			else return visitor.visitChildren(this);
		}
	}
